[josm_apache-http] Add new plugin for Apache HTTP libraries, used by several plugins

--- a/README
+++ b/README
@@ -1,11 +1,9 @@
 README 
 ======
 
-Readme for your plugin 
+Readme for Apache HTTP plugin 
 
-    * Plugin author and contact email address.
+    * Don-vip
     
-    * The license for your plugin source code. If you have no special preferences, 
-      you can pick the license that is used for JOSM ("GPL v2 or later").
+    * License: GPL v3 or later
       
-    * Notes for future developers, if needed.
